--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
+apply plugin: 'build-announcements'
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 def gitVersion() {
     return "git rev-list master --first-parent --count".execute([], project.rootDir).text.toInteger()
@@ -12,6 +16,10 @@ def gitVersion() {
 
 def gitTag() {
     return "git describe --tags".execute([], project.rootDir).text.trim()
+}
+
+retrolambda {
+    javaVersion JavaVersion.VERSION_1_7
 }
 
 android {
@@ -58,13 +66,69 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+}
+
+ext {
+    support = '23.1.1'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.1.1'
+    compile "com.android.support:support-v4:${support}"
+    compile "com.android.support:design:${support}"
+    compile "com.android.support:appcompat-v7:${support}"
+    compile "com.android.support:cardview-v7:${support}"
+    compile "com.android.support:recyclerview-v7:${support}"
+    compile "com.android.support:palette-v7:${support}"
+
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
+
+    // Guava
+
+    // Dagger
+    compile 'com.google.dagger:dagger:2.+'
+    apt 'com.google.dagger:dagger-compiler:2.+'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    // Butterknife
+    compile 'com.jakewharton:butterknife:8.+'
+    apt 'com.jakewharton:butterknife-compiler:8.+'
+
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.+'
+    compile 'com.github.bumptech.glide:okhttp-integration:+'
+
+    // GSON
+    compile 'com.google.code.gson:gson:+'
+
+    // OkHttp
+    compile 'com.squareup.okhttp:okhttp:2.+'
+    compile 'com.squareup.okhttp:logging-interceptor:2.+'
+
+    // RxJava
+    compile('io.reactivex:rxandroid:+') {
+        exclude module: 'rxjava'
+    }
+    compile 'io.reactivex:rxjava:+'
+
+    // Retrofit
+    compile('com.squareup.retrofit:retrofit:2.+') {
+        exclude module: 'okhttp'
+    }
+    compile 'com.squareup.retrofit:converter-gson:2.+'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.+'
+
+    // Database Schematic
+    apt 'net.simonvt.schematic:schematic-compiler:+'
+    compile 'net.simonvt.schematic:schematic:+'
+
+    // SVG Parser
+    compile 'com.caverock:androidsvg:+'
+
+    // Auto Parcel
+    apt 'com.github.frankiesardo:auto-parcel-processor:+'
+    compile 'com.github.frankiesardo:auto-parcel:+'
 }
