--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.example.romain.virtualpassport"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:installLocation="auto">
+<manifest
+    package="com.example.romain.virtualpassport"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:installLocation="auto">
+
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="io.romain.passport.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Passport"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
         <activity
-            android:name="io.example.romain.virtualpassport.MainActivity"
+            android:name="io.romain.passport.ui.LandingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/Passport.Home">
         </activity>
-
 
         <!-- use an alias in case we want to change the launch activity later without breaking
              homescreen shortcuts.  Note must be defined after the targetActivity -->
         <activity-alias
             android:name=".Launcher"
             android:label="@string/app_name"
-            android:targetActivity="io.example.romain.virtualpassport.MainActivity">
+            android:targetActivity="io.romain.passport.ui.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
