--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,18 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:+'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.+'
+        classpath 'me.tatarka:gradle-retrolambda:3.+'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
