--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.+'
+        classpath 'com.android.tools.build:gradle:+'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.+'
         classpath 'me.tatarka:gradle-retrolambda:3.+'
     }
