--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,4 +153,8 @@ dependencies {
 //    // Auto Parcel
 //    apt 'com.github.frankiesardo:auto-parcel-processor:+'
 //    compile 'com.github.frankiesardo:auto-parcel:+'
+
+    // Setho
+    debugCompile 'com.facebook.stetho:stetho:1.3.1'
+    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 }
