--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,13 +52,14 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Passport.Home"/>
+            android:theme="@style/Passport.Home.Black"/>
+
         <activity
             android:name=".ui.RegisterActivity"
             android:label="@string/app_name"
             android:parentActivityName=".ui.LandingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Passport.Register">
+            android:theme="@style/Passport.LoadingScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="io.romain.passport.ui.LandingActivity"/>
@@ -68,7 +69,7 @@
             android:label="@string/app_name"
             android:parentActivityName=".ui.LandingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Passport.Login">
+            android:theme="@style/Passport.LoadingScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="io.romain.passport.ui.LandingActivity"/>
@@ -86,7 +87,7 @@
             android:label="@string/app_name"
             android:parentActivityName=".ui.LandingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Passport.Main">
+            android:theme="@style/Passport.LoadingScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="io.romain.passport.ui.LandingActivity"/>
@@ -96,7 +97,7 @@
             android:name=".ui.CityDetailActivity"
             android:parentActivityName=".ui.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Passport.Detail">
+            android:theme="@style/Passport.LoadingScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="io.romain.passport.ui.MainActivity"/>
