--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:+'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.+'
         classpath 'me.tatarka:gradle-retrolambda:3.+'
+        classpath 'com.squareup.sqldelight:gradle-plugin:0.2.2'
     }
 }
 
@@ -16,5 +17,11 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
     }
 }
