--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,16 @@ android:
     - sys-img-armeabi-v7a-android-23
     - sys-img-armeabi-v7a-addon-google_apis-google-22
 
+before_script:
+    - chmod +x gradlew
+
+script: 
+    - ./gradlew clean assembleRelease --parallel --daemon
+
+branches:
+    only:
+        - master
+
+
 jdk:
   - oraclejdk8
