--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,9 +138,7 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // Butterknife
-//    compile 'com.jakewharton:butterknife-annotations:8.+'
     compile 'com.jakewharton:butterknife:7.0.1'
-//    apt 'com.jakewharton:butterknife-compiler:8.+'
 
     // GSON
     compile 'com.google.code.gson:gson:2.6.2'
@@ -156,7 +154,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.1'
 
     // Retrofit (keep + since it's in beta)
-    compile('com.squareup.retrofit2:retrofit:2.+') {
+    compile('com.squareup.retrofit2:retrofit:2.0.') {
         exclude module: 'okhttp'
     }
     compile('com.squareup.retrofit2:converter-gson:2.+')
@@ -170,7 +168,6 @@ dependencies {
     debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 
     // Auto-Value
-//    provided "com.google.auto.value:auto-value:1.2"
     provided 'com.jakewharton.auto.value:auto-value-annotations:1.2-update1'
     apt "com.google.auto.value:auto-value:1.2"
     apt "com.ryanharter.auto.value:auto-value-parcel:0.2.1"
